# faces_protogen_app

./: CMakeLists.txt  setup_dev.sh
include/faces/: images.h  protogen_head_state.h  renderer.h
resources/static/: face.js  index.html
src/: Faces.cpp  images.cpp  protogen_head_state.cpp  renderer.cpp
